--- a/index.html
+++ b/index.html
@@ -1,94 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Poket Pixel</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Download Zone</title>
 <style>
-  :root { --gap: 12px; }
-  * { box-sizing: border-box; }
-  body {
-    margin: 0; padding: var(--gap);
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-    background: #f6f7f9; color: #111;
-  }
-  h1 { font-size: 1.2rem; margin: 0 0 var(--gap) 0; }
-  textarea {
-    width: 100%; min-height: 180px; padding: 12px;
-    border: 1px solid #ccc; border-radius: 12px; background: #fff;
-    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
-    font-size: 13px;
-  }
-  .actions { display: grid; grid-template-columns: repeat(2, 1fr); gap: var(--gap); margin-top: var(--gap); }
-  button {
-    padding: 12px; border-radius: 12px; border: 1px solid #ddd; background: white; font-size: 16px; width: 100%;
-  }
-  .preview {
-    margin-top: var(--gap); padding: var(--gap); background: #fff; border: 1px solid #eee; border-radius: 12px;
-  }
-  img { max-width: 100%; height: auto; display: block; border-radius: 8px; }
-  .note { font-size: 0.92rem; color: #555; margin-top: 6px; }
+:root{
+  --bg:#07121a;
+  --card: rgba(255,255,255,0.03);
+  --muted9fb0c4;
+  --accent:#06b6d4;
+  --accent2:#7c3aed;
+  --glass: rgba(255,255,255,0.035);
+  --radius:14px;
+  --tap:56px;
+  --gap:10px;
+}
+*{box-sizing:border-box; -webkit-tap-highlight-color: transparent;}
+html,body{height:100%; margin:0; font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial; background:linear-gradient(180deg,#061219 0%, #07121a 100%); color:#e8f6fb; display:flex; justify-content:center; align-items:center;}
+.container {
+  background: var(--card);
+  padding: 20px;
+  border-radius: var(--radius);
+  backdrop-filter: blur(10px);
+  border:1px solid rgba(255,255,255,0.05);
+  display:flex; flex-direction:column; gap:15px; width:320px;
+  box-shadow:0 8px 24px rgba(0,0,0,0.5);
+}
+h1 { font-size:18px; margin:0; color:var(--accent); text-align:center; }
+.inputs label { font-weight:600; margin-bottom:5px; display:block; color:#fff; }
+.inputs input {
+  width:100%; padding:10px; border-radius:var(--radius); border:none;
+  background:var(--glass); color:#e8f6fb; outline:none;
+}
+.buttons { display:flex; gap:10px; justify-content:center; margin-top:10px; }
+button {
+  flex:1; padding:10px; border-radius:var(--radius); border:none;
+  background: linear-gradient(90deg,var(--accent),var(--accent2));
+  color:#042029; font-weight:600; cursor:pointer; transition:0.3s;
+}
+button:hover { opacity:0.85; transform:translateY(-2px); }
+#refImg { width:100%; max-height:300px; object-fit:contain; border-radius:var(--radius); border:1px solid rgba(255,255,255,0.05); display:none; margin-top:10px; }
 </style>
 </head>
 <body>
-  <h1>Paste Data Text → Preview → Download</h1>
-
-  <textarea id="data" placeholder="Paste the text you copied from the Draw page (it should start with something like: data:image/png;base64,…)"></textarea>
-
-  <div class="actions">
-    <button id="previewBtn">Preview</button>
-    <button id="downloadBtn">Download PNG</button>
-  </div>
-
-  <div class="preview" id="previewBox" style="display:none;">
-    <img id="imgPrev" alt="Preview"/>
-    <div class="note" id="info"></div>
+  <div class="container">
+    <h1>Poket Pixel — Download Zone</h1>
+    <div class="inputs">
+      <label for="fileName">File Name</label>
+      <input type="text" id="fileName" value="pixel-art.png"/>
+    </div>
+    <div class="buttons">
+      <button id="paste">Download</button>
+      <button id="refToggle">Preview</button>
+    </div>
+    <img src="" id="refImg"/>
   </div>
 
 <script>
-(function(){
-  const textarea = document.getElementById('data');
-  const previewBtn = document.getElementById('previewBtn');
-  const downloadBtn = document.getElementById('downloadBtn');
-  const previewBox = document.getElementById('previewBox');
-  const imgPrev = document.getElementById('imgPrev');
-  const info = document.getElementById('info');
+const fileName = document.getElementById('fileName');
+let prev = false;
+const refImg = document.getElementById('refImg');
 
-  function validDataUrl(s){
-    return /^data:image\/(png|jpeg|webp);base64,/.test(s);
-  }
-
-  function showPreview(){
-    const raw = textarea.value.trim();
-    if (!validDataUrl(raw)) {
-      alert('Invalid data. Make sure you pasted the text from the Draw page (should start with data:image/png;base64,...)');
-      return;
-    }
-    imgPrev.onload = function() {
-      previewBox.style.display = 'block';
-      info.textContent = `Preview: ${imgPrev.naturalWidth}×${imgPrev.naturalHeight}`;
-    };
-    imgPrev.onerror = function() {
-      alert('Could not load the pasted data. It may be corrupted.');
-    };
-    imgPrev.src = raw;
-  }
-
-  function downloadImage(){
-    const raw = textarea.value.trim();
-    if (!validDataUrl(raw)) {
-      alert('Paste a valid image data URL first.');
-      return;
-    }
+document.getElementById("paste").addEventListener("click", async () => {
+  try {
+    const text = await navigator.clipboard.readText();
     const a = document.createElement('a');
-    a.href = raw;
-    a.download = 'canvas.png';
-    a.click();
+    a.href = text;
+    a.download = fileName.value.trim();
+    a.click(); 
+  } catch (err) {
+    console.error("Failed to read clipboard:", err);
+    alert("Failed to read clipboard. Make sure you are on HTTPS or localhost and allowed permissions.");
   }
+});
 
-  previewBtn.addEventListener('click', showPreview);
-  downloadBtn.addEventListener('click', downloadImage);
-})();
+document.getElementById("refToggle").addEventListener("click", async () => {
+  prev = !prev;
+  if(prev){
+    try {
+      const text = await navigator.clipboard.readText();
+      if(!text){return;}
+      refImg.src = text;
+      refImg.style.display = 'block';
+    } catch (err) {
+      console.error("Failed to read clipboard:", err);
+      alert("Failed to read clipboard. Make sure you are on HTTPS or localhost and allowed permissions.");
+    }
+  } else {
+    refImg.style.display = 'none';
+  }
+});
 </script>
 </body>
 </html>
